<resources>
    <string name="GiaoDich_2">Giao dịch</string>
    <string name="KL_3">KL</string>
    <string name="KhongMoDuocLink">Không mở được link</string>
    <string name="Index">Index</string>
    <string name="STT">STT</string>
    <string name="Xoa_Keyboard">Xóa</string>
    <string name="ChuaDenHanDangKyMua">Chưa đến hạn đăng ký mua</string>
    <string name="DaDangKyMuaHet">Đã đăng ký mua hết</string>
    <string name="MoCua">Mở cửa</string>
    <string name="KhoiLuongKhop">Khối lượng khớp</string>
    <string name="Mua_Ban_2">Mua/Bán</string>
    <string name="NgayCT">Ngày CT</string>
    <string name="SoLuongDuocMua">SL được mua</string>
    <string name="SoLuongMua">Số lượng mua</string>
    <string name="SoTaiKhoanNganHang_2">Số tài khoản ngân hàng</string>
    <string name="TaiKhoanChuyenTien">Tài khoản chuyển tiền</string>
    <string name="SoTieuKhoanChuyenTien">Số tiểu khoản chuyển tiền</string>
    <string name="SoTienDeNghiChuyen">Số tiền đề nghị chuyển</string>
    <string name="SoTienPhiDichVu">Số tiền phí dịch vụ</string>
    <string name="DienThoai_2">Điện thoại:&#160;</string>
    <string name="NgayGiaoDich">Ngày giao dịch</string>
    <string name="TongKhoiLuongGiaoDich">Tổng khối lượng giao dịch</string>
    <string name="GiaTran">Giá trần</string>
    <string name="GiaSan">Giá sàn</string>
    <string name="SoLuongKhop">Số lượng khớp</string>
    <string name="GiaTriKhop">Giá trị khớp</string>
    <string name="ThueGiaoDich">Thuế giao dịch</string>
    <string name="NgayDatLenh">Ngày đặt lệnh</string>
    <string name="SoDuCuoi">Số dư cuối</string>
    <string name="DienGiai">Diễn giải</string>
    <string name="ChiTietGiaoDichTien">Chi tiết giao dịch tiền</string>
    <string name="GiaThiTruong">Giá thị trường</string>
    <string name="Muc">Mục</string>
    <string name="GiaBinhQuan">Giá bình quân</string>
    <string name="LaiLo">Lãi/lỗ</string>
    <string name="PercentLaiLo">%Lãi/lỗ</string>
    <string name="GiaTriThiTruong">Giá trị thị trường</string>
    <string name="GiaThamChieu">Giá tham chiếu</string>
    <string name="ChoKhop">Chờ khớp</string>
    <string name="ChoVeQuyen">Chờ về quyền</string>
    <string name="TienBanT1">Tiền bán T1</string>
    <string name="TienBanT2">Tiền bán T2</string>
    <string name="TienBanT0">Tiền bán T0</string>
    <string name="DuNoHienTai">Dư nợ hiện tại</string>
    <string name="CoTucChoVe">Cổ tức chờ về</string>
    <string name="TienCoTheUng">Tiền có thể ứng</string>
    <string name="TaiKhoanThuHuong">Tài khoản thụ hưởng</string>
    <string name="TenNganHang">Tên ngân hàng</string>
    <string name="SoTKTaiFNS">Số TK tại TCSC</string>
    <string name="SoTaiKkhoanTaiFNS">Số tài khoản tại TCSC</string>
    <string name="SoTieuKhoanTaiFNS">Số tiểu khoản tại TCSC</string>
    <string name="DaHuy">Đã hủy</string>
    <string name="Gia1">Giá 1</string>
    <string name="Gia2">Giá 2</string>
    <string name="Gia3">Giá 3</string>
    <string name="KL1">KL 1</string>
    <string name="KL2">KL 2</string>
    <string name="KL3">KL 3</string>
    <string name="DuMua">Dư mua</string>
    <string name="KhopLenh">Khớp lệnh</string>
    <string name="DuBan">Dư bán</string>
    <string name="TongKL_2">Tổng KL</string>
    <string name="SoLuong_2">Số lượng</string>
    <string name="SoLuongMuaKhongDuocDeTrong">Số lượng mua không được để trống</string>
    <string name="HinhThucChuyenKhoan">Hình thức chuyển khoản</string>
    <string name="Luu">Lưu</string>
    <string name="HetHan">Hết hạn</string>
    <string name="Sua">Sửa</string>
    <string name="NgayHieuLuc">Ngày hiệu lực</string>
    <string name="ThongTinChiTietQuyenMua">Thông tin chi tiết quyền mua</string>
    <string name="TenCK">Tên CK</string>
    <string name="LoaiCK">Loại CK</string>
    <string name="NgayDangKyCuoiCung">Ngày đăng ký cuối cùng</string>
    <string name="MenhGia">Mệnh giá</string>
    <string name="TyLePhanBo">Tỷ lệ phân bố</string>
    <string name="GiaDatMua">Giá đặt mua</string>
    <string name="TrangThaiLenh">Trạng thái lệnh</string>
    <string name="ThoiGianChuyenNhuong">Thời gian chuyển nhượng</string>
    <string name="ThoiGianNopTien">Thời gian nộp tiền</string>
    <string name="Dong">Đóng</string>
    <string name="DangKyThucHienQuyen">Đăng ký thực hiện quyền</string>
    <string name="MaCKDuocHuongQuyen">Mã CK được hưởng quyền</string>
    <string name="Giamua">Giá mua</string>
    <string name="SoLuongCKDuocMua">Số lượng CK được mua</string>
    <string name="SoLuongDaDangKyMua">Số lượng đã đăng ký mua</string>
    <string name="SoTienMuaPhaiThanhToan">Số tiền mua phải thanh toán</string>
    <string name="ThongTinChiTietQuyen">Thông tin chi tiết quyền</string>
    <string name="Xem">Xem</string>
    <string name="LenhDieuKien">Lệnh điều kiện</string>
    <string name="RoRPolicy">Tôi đồng ý trích tiền từ tài khoản của tôi chuyển sang tài khoản của công ty chứng khoán Funan để đăng ký quyền mua CK.</string>
    <string name="RoRPolicy_Error">Bạn chưa đồng ý điều khoản</string>
    <string name="BanCoMuonXoaMa">Bạn có muốn xóa mã</string>
    <string name="CheckPolicy">Bạn không có quyền thực hiện thao tác này</string>
    <string name="ThanhPho">Thành phố</string>
    <string name="Xong">Xong</string>
    <string name="ChiNhanh">Chi nhánh</string>
    <string name="NganHangNguoiThuHuong">Ngân hàng người thụ hưởng</string>
    <string name="SoTienChuyen">Số tiền chuyển</string>
    <string name="Ty">Tỷ</string>
    <string name="TongTienVND">Tổng tiền (VND)</string>
    <string name="SoDuTienVND">Số dư tiền (VND)</string>
    <string name="TKmacdinh">TK mặc định</string>
    <string name="SoDienThoai">Số điện thoại</string>
    <string name="TaiKhoanDangNhap">Tài khoản đăng nhập</string>
    <string name="Notice_ChuyenTien1">Số tiền chuyển tối thiểu là 100,000VND và tối đa là 1,000,000VND. Chi phí chuyển tiền tính theo quy định của ngân hàng và do khách hàng chịu. Thời gian thực hiện chuyển khoản là 24&#8260;7</string>
    <string name="Notice_DangKyChuyenTien">Lưu ý: yêu cầu các trường không được để trống và viết tiếng việt không dấu</string>
    <string name="Notice_ChuyenTien3">Thời gian thực hiện chuyển khoản là 24&#8260;7</string>
    <string name="ThayDoi">Thay đổi</string>
    <string name="ThoiGian">Thời gian</string>
    <string name="TieuKhoanDangKy">Tiểu khoản đăng ký</string>
    <string name="ThongTinKhachHang">Thông tin khách hàng</string>
    <string name="allcustomers">Tất cả khách hàng</string>
    <string name="HoTenKhachHang">Họ tên khách hàng</string>
    <string name="TongTaiSan">Tổng tài sản</string>
    <string name="TongNo">Tổng nợ</string>
    <string name="NoBaoLanh">Nợ bảo lãnh</string>
    <string name="BaoLanhDaCapTrongNgay">Bảo lãnh đã cấp trong ngày</string>
    <string name="GiaTriMuaTrongNgay">Giá trị mua trong ngày</string>
    <string name="tienmatcongtienungtruoc">Tiền mặt + tiền ứng trước</string>
    <string name="sodutien_label_RTT">Tỷ lệ ký quỹ (Rtt) </string>
    <string name="sodutien_label_RTTbono">Rtt bỏ nợ BL TH/QH</string>
    <string name="Rttconobaolanh">Rtt có nợ bảo lãnh</string>
    <string name="RTTgomnobaolanh">Rtt (gồm nợ bảo lãnh)</string>
    <string name="RtttrunoBLchuadenhan">Rtt trừ nợ BL chưa đến hạn</string>
    <string name="tilevaymargin">Tỷ lệ vay margin</string>
    <string name="tilevaytopup">Tỷ lệ vay Topup</string>
    <string name="Danhsachkhachhang">Danh sách khách hàng</string>
    <string name="HoatDong">Hoạt động</string>
    <string name="KhoiLuongChuyen">Khối lượng chuyển</string>
    <string name="DongY">Đồng ý</string>
    <string name="SoTieuKhoan">Số tiểu khoản</string>
    <string name="SoLuong">Số lượng</string>
    <string name="TenNguoiNhan">Tên người nhận</string>
    <string name="YeuCauNhapTiengVietKhongDau">Yêu cầu nhập tiếng việt không dấu</string>
    <string name="PhiUngDuTinh">Phí ứng dự tính</string>
    <string name="SoTienToiDaDuocChuyen">Số tiền tối đa được chuyển</string>
    <string name="SoTienDichVu">Số tiền dịch vụ</string>
    <string name="TienUngTruoc">Tiền ứng trước</string>
    <string name="TaiKhoanChuyen">Tài khoản chuyển</string>
    <string name="HDMTK">Hướng dẫn mở tài khoản</string>
    <string name="HDMGSD">Hướng dẫn môi giới sử dụng</string>
    <string name="HuongDanNopTien">Hướng dẫn nộp tiền</string>
    <string name="DienThoai">Điện thoại</string>
    <string name="TimKiemTheoMa">Tìm kiếm theo mã</string>
    <string name="DaXoaThanhCong">Đã xóa thành công</string>
    <string name="KetQuaHuyLenh">Kết quả hủy lệnh</string>
    <string name="Yes">Có</string>
    <string name="No">Không</string>
    <string name="Cancel">Hủy</string>
    <string name="XacNhan">Xác nhận</string>
    <string name="Sorry">Xin lỗi không thể tạo bản đồ</string>
    <string name="FNSBankBranch">Các chi nhánh TCSC</string>
    <string name="GPS">GPS trên thiết bị của bạn đã bị tắt, bạn có muốn bật nó lên không</string>
    <string name="Wifi">Wifi trên thiết bị của bạn đã bị tắt, bạn có muốn bật nó lên không</string>
    <string name="gotoGPS">Đi đến phần thiết lập GPS</string>
    <string name="gotoWifi">Đi đến phần thiết lập Wifi</string>
    <string name="ThemMoi">Thêm mới</string>
    <string name="Clear">Xóa</string>
    <string name="thong_bao">Thông báo</string>
    <string name="TieuKhoan">Tiểu khoản</string>
    <string name="Mua">Mua</string>
    <string name="Ban">Bán</string>
    <string name="BanCC">Bán CC</string>
    <string name="label_DangKy">Đăng ký</string>
    <string name="Back">Quay lại</string>
    <string name="LoiKetNoi">Lỗi kết nối!</string>
    <string name="Giaodichthanhcong">Giao dịch thành công!</string>
    <string name="msg_LoiKetNoi">"Không thể kết nối được tới Server.\n Hãy chắc chắn rằng thiết bị của bạn được kết nối với Internet"</string>
    <string name="ChuaNhapDL">Bạn chưa nhập đầy đủ thông tin</string>
    <string name="ChuaNhapDungDL">Mật khẩu phải có ít nhất 6 ký tự</string>
    <string name="NhapPin">Vui lòng nhập mật khẩu giao dịch</string>
    <string name="noti_loading">Bạn vui lòng đợi trong giây lát</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="chu_tai_khoan">Chủ tài khoản</string>
    <string name="cap_nhat">Cập nhật</string>
    <string name="MacDinh">Mặc định</string>
    <string name="tai_khoan_moi_gioi">Tài khoản môi giới</string>
    <string name="KhongThucHienDuocGiaoDich">Không thực hiện được giao dịch</string>
    <string name="chi_tiet">Chi tiết</string>
    <string name="DatLenh">Đặt lệnh</string>
    <string name="timeoutsau">Timeout sau</string>
    <string name="phut">phút</string>
    <string name="kieu">Kiểu</string>
    <string name="Tu">Từ</string>
    <string name="Den">đến</string>
    <string name="stockcompany_info">Copyright 2018 Công ty Cổ Phần Chứng Khoán Thành Công \n Cung cấp bởi FSS</string>
    <string name="LocTheoMaCK">Lọc theo mã ck</string>
    <string name="BoLoc">Bỏ lọc</string>
    <string name="TimKiem">Tìm kiếm</string>
    <string name="HuyTatCaLenh">Hủy tất cả lệnh</string>
    <string name="Mua_Ban">M/B</string>
    <string name="TrangThai">Trạng thái</string>
    <string name="TieuKhoanNguon">Tiểu khoản nguồn</string>
    <string name="MaXacThuc">Mã xác thực</string>
    <string name="Khop">Khớp</string>
    <string name="MaCK">Mã CK</string>
    <string name="MaCK2">Mã CK</string>
    <string name="MaChungKhoan">Mã chứng khoán</string>
    <string name="TongTien">Tổng tiền</string>
    <string name="KL_2">KL</string>
    <string name="Gia">Giá</string>
    <string name="solenh_label_All">Tất cả</string>
    <string name="Cho">Chờ</string>
    <string name="solenh_label_Khophet">Khớp hết</string>
    <string name="dkqm_label_SLduocmua">SL được mua</string>
    <string name="SoLuongMua2">Số lượng mua</string>
    <string name="chuyenkhoanck_label_TKNhan">Tiểu khoản nhận</string>
    <string name="KhoiLuongHienCo">Khối lượng hiện có</string>
    <string name="SoDu">Số dư</string>
</resources>